--- a/src/content/en/home.html
+++ b/src/content/en/home.html
@@ -11,7 +11,7 @@ description: The pain revolution is here. Our mission is to develop high-quality
   <div class="[ squeeze12 stack ] [ cx g4 ]">
     {% include 'partials/homeIntro.html' %}
     <div class="[ switcher11 ] [ g3 ]">
-      {% set articles = collections[locale + '-articles'] %}
+      {% set articles = collections[locale + 'Articles'] %}
       <section class="[ flow2 ]">
         <h2 class="[ h-fancy ]">For clinicians</h2>
         <div class="[ flow1/3 ]">
