--- a/src/content/fr/home.html
+++ b/src/content/fr/home.html
@@ -10,7 +10,7 @@ description: La révolution de la douleur est arrivée. Notre mission est de dé
 <main>
   <div class="[ squeeze12 stack ] [ cx g4 ]">
     {% include 'partials/homeIntro.html' %}
-    {% set articles = collections[locale + '-articles'] %}
+    {% set articles = collections[locale + 'Articles'] %}
     <section class="[ flow2 ]">
       <h2 class="[ h-fancy ]">Pour les patients</h2>
       <div class="[ flow1/3 ]">
