CAC español PUBLISH!

--- a/src/content/es/csaw.html
+++ b/src/content/es/csaw.html
@@ -135,7 +135,7 @@ description: Los hallazgos de este ensayo clínico plantean un verdadero desafí
         </div>
       </div>
       <div class="[ flow2 side7 ] [ pl0 bdl-1 bd-p500 fs-1 ]">
-      <p><strong>Pacientes con dolor de hombro:</strong><br>Comente este estudio con tu profesional sanitario de confianza. Pregúntale sobre los riesgos, los beneficios y las pruebas que respaldan las distintas opciones de tratamiento. Colaborad para tomar una decisión informada que sea adecuada para tí.</p>
+      <p><strong>Pacientes con dolor de hombro:</strong><br>Comente este estudio con tu profesional sanitario de confianza. Pregúntale sobre los riesgos, los beneficios y las pruebas que respaldan las distintas opciones de tratamiento. Colaborad para tomar una decisión informada que sea adecuada para ti.</p>
       <p><strong>Profesionales sanitarios:</strong><br>Las terapias invasivas pueden ser potentes, pero no se debe dar por hecho la validez de los procedimientos establecidos. Habla con tus pacientes sobre la evidencia vinculada con la cirugía para su condición. Colaborad para tomar una decisión informada que sea adecuada para el paciente.</p>
     </div>
     </section>
