--- a/src/content/es/forms/omsq.html
+++ b/src/content/es/forms/omsq.html
@@ -170,7 +170,7 @@ title: ÖMSQ-12
 
 
       <fieldset>
-        <legend>¿Cómo son de ciertas estas afirmaciones para tí?</legend>
+        <legend>¿Cómo son de ciertas estas afirmaciones para ti?</legend>
         <ol class="stack g3" start="9">
           <li class="stack g-1">
             <p>La actividad físicas hace que mi dolor o problema empeore.<br><em class="fs-1">0 = para nada, 10 = completamente</em></p>
