--- a/src/content/es/home.html
+++ b/src/content/es/home.html
@@ -31,19 +31,19 @@ description: La revolución del dolor ha llegado. Nuestra misión es desarrollar
           </ul>
         </div>
       </section>
-      <!-- <section class="[ flow2 ]">
-        <h2 class="[ h-fancy ]">For patients</h2>
+      <section class="[ flow2 ]">
+        <h2 class="[ h-fancy ]">Para pacientes</h2>
         <div class="[ flow1/3 ]">
           <h3>Articles</h3>
           <ul class="[ flow1/3 ]">
             {% for entry in articles %}
             {% if entry.data.audience == 'patients' %}
-            <li><a href="{{ entry.url }}">{{ entry.data.title }}{% if entry.data.subtitle %}: {{ entry.data.subtitle }}{% endif %}</a>{% if entry.data.description %} - {{ entry.data.description }}{%endif %}</li>
+            <li><a href="{{ entry.url }}">{{ entry.data.title }}{% if entry.data.subtitle %}: {{ entry.data.subtitle }}{% endif %}</a>{% if entry.data.description %} - {{ entry.data.description }}{% endif %}</li>
             {% endif %}
             {% endfor %}
           </ul>
         </div>
-      </section> -->
+      </section>
     </div>
     <section class="[ flow2 ]">
       <h2 class="[ h-fancy ]">Proyectos</h2>
