Move translations to header; update 11ty

--- a/src/content/en/exercises.html
+++ b/src/content/en/exercises.html
@@ -10,7 +10,11 @@ description: The BEVAE exercise compendium.
 <main>
   <div class="[ squeeze12 stack ] [ cx g4 ]">
     <h1>Exercises</h1>
-    (Zeph) Hello! Welcome to the exercise compendium.
+    <p>ENGLISH: (Fred) Hej! (Zeph) Bonjour! (Fred) Hola! (Zeph) Hello! Welcome to the BEVAE exercise database. (Frederik) We have organized the exercises by movement pattern in order to make it easier to put together a well rounded exercise program. (Zeph) No matter who you are, always make sure to be adequately warmed up before starting your working sets, and choose exercises that match your current capabilities. (Together) Thank you!</p>
+    <p>DANISH: (Zeph) Bonjour! (Fred) Hola! (Zeph) Hello! (Fred) Hej! Welcome to the BEVAE exercise database. (Frederik) We have organized the exercises by movement pattern in order to make it easier to put together a well rounded exercise program. (Zeph) No matter who you are, always make sure to be adequately warmed up before starting your working sets, and choose exercises that match your current capabilities. (Together) Tak!</p>
+    <p>SPANISH: (Zeph) Hello! (Fred) Hej! (Zeph) Bonjour! (Fred) Hola! (Together) Gracias!</p>
+    <p>FRENCH: (Fred) Hej! (Zeph) Bonjour! (Fred) Hola! (Zeph) Hello! Welcome to the BEVAE exercise database. (Frederik) We have organized the exercises by movement pattern in order to make it easier to put together a well rounded exercise program. (Zeph) No matter who you are, always make sure to be adequately warmed up before starting your working sets, and choose exercises that match your current capabilities. (Together) Merci!</p>
+    <p></p>
     <div class="[ grid8 ] [ gx3 gy4 ]">
       {% for category in site[locale + 'ExerciseCategories'] %}
       <div class="[ flow2 ]">
