--- a/src/content/index.html
+++ b/src/content/index.html
@@ -11,7 +11,7 @@ description: The pain revolution is here. Our mission is to develop high-quality
       <p><strong>Choose a language</strong></p>
       <div class="[ flow1/2 ] [ fs-1 ]">
         <p>Vælg et sprog</p>
-        <p>Eligir un idioma</p>
+        <p>Elegir un idioma</p>
         <p>Choisir une langue</p>
       </div>
     </div>
